gcc/testsuite/rust/rustc/ui/parser/unicode-chars.rs
fn main() {
    let y = 0;
// { dg-error "" "" { target *-*-* } .-1 }
// { help "" "" { target *-*-* } .-2 }
}

